--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <label for="text">Textarea:</label>
-                    <textarea name="text" id="text" cols="30" rows="10">Enter your text</textarea>
+                    <textarea style="min-width: 95%; max-width: 95%; min-height: 300px" name="text" id="text" cols="30" rows="10">Enter your text</textarea>
                     <div style="text-align: right;">
                         <input type="submit" value="submit" class="submit" style="width: fit-content;">
                     </div>
